syntax = "proto3";

import "google/protobuf/any.proto";
package rageta.core.v1beta1;

option go_package="github.com/raffis/rageta/pkg/apis/core/v1beta1";

message StepResult {
  map<string, string> outputs = 1;
  string tmpDir = 2;
}

message ContainerStatus {
  string containerID = 1;
  string containerIP = 2;
  string name = 3;
  bool ready = 4;
  bool started = 5;
  int32 exitCode = 6;
}

message RuntimeVars {
  repeated string args = 1;
  map<string, google.protobuf.Any> inputs = 2;
  map<string, string> envs = 3;
  map<string, ContainerStatus> containers = 4;
  map<string, StepResult> steps = 5;
  string tmpDir = 6;
  string rootDir = 7;
  map<string, google.protobuf.Any> matrix = 8;
  string env = 9;
  string output = 10;
  string os = 11;
  string arch = 12;
}
